[gd_scene load_steps=3 format=3 uid="uid://codbkkxx1cbn0"]

[ext_resource type="Script" path="res://VisualNovel/scripts/pause_menu.gd" id="1_4jogj"]
[ext_resource type="Theme" uid="uid://jaaphdr8d1pm" path="res://VisualNovel/fonts/theme/balloon_theme.tres" id="2_djb0w"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_4jogj")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(512, 288)
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(512, 288)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_djb0w")
alignment = 1

[node name="Titulo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "JOGO PAUSADO

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continuar" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Continuar"

[node name="Reiniciar" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reiniciar"

[node name="Menu" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Menu"

[connection signal="pressed" from="Panel/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
